WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269847
REGRESSION (
271599@main
): espn.com: Closed captions aren't displaying in videos
https://bugs.webkit.org/show_bug.cgi?id=269847
Summary
REGRESSION (271599@main): espn.com: Closed captions aren't displaying in videos
Jean-Yves Avenard [:jya]
Reported
2024-02-21 07:04:38 PST
When playing any video on ESPN.com and enabling Closed Captions, the captions do not display. Steps To Reproduce: 1. Launch Safari 2.
https://www.espn.com/video/clip?id=39514497
3. Enable Closed Captions 4. Play the video Results: Video plays but CC does not display
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2024-02-21 07:05:31 PST
rdar://122842659
Jean-Yves Avenard [:jya]
Comment 2
2024-02-21 07:10:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24879
EWS
Comment 3
2024-02-22 13:29:34 PST
Committed
275201@main
(c8652ac395bc): <
https://commits.webkit.org/275201@main
> Reviewed commits have been landed. Closing PR #24879 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug